@@ -117,7 +117,7 @@ char *ssl_var_lookup(apr_pool_t *p, server_rec *s, conn_rec *c, request_rec *r, 
             if (strcEQ(var, "REQUEST_METHOD")) 
                 result = r->method;
             else if (strcEQ(var, "REQUEST_SCHEME"))
-                result = ap_http_method(r);
+                result = ap_http_scheme(r);
             else if (strcEQ(var, "REQUEST_URI"))
                 result = r->uri;
             else if (strcEQ(var, "REQUEST_FILENAME"))
